==============================================================
1.0.0 [2021/12/10 10:00:59]
==============================================================
 - Original release wgblocks (Goffy - Wedega.com)
 - added new update (goffy)
 - replaced Common/XoopsConfirm by Common/Confirm(mamba/goffy)
 - increased field size (goffy)
 - usage of multiple functions in one php file (alain/goffy)
 - adapted update due to new semantic versioning (goffy)
 